fix Discover icon spacing issue, crop gradient effect paths
bumped version to 0.5.3

--- a/Payment Processor Icons/payment processor icons.less
+++ b/Payment Processor Icons/payment processor icons.less
@@ -4,7 +4,7 @@
   
   License       : < https://tinyurl.com/s872fb68 >
   
-  Version       : 0.5.2
+  Version       : 0.5.3
   
   SS Versions   : 7.1, 7.0
   
@@ -684,7 +684,7 @@
     
   // paypal
   
-  #paypal-logo-icon svg {
+  #paypal-icon svg {
     
     width : @height-width * 1.66666667;
     
@@ -1090,7 +1090,7 @@
           
         } // end mastercard
         
-      #paypal-logo-icon {
+      #paypal-icon {
       
         #display-order#paypal;
         
